# terraguard

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
api/: index.html
api/cli/: index.html
api/config/: index.html
api/outputs/: index.html
api/risk/: index.html
api/terraform-plan/: index.html
configuration/: index.html
docs/: configuration.md  index.md  usage.md
docs/api/: cli.md  config.md  index.md  outputs.md  risk.md  terraform-plan.md
search/: search_index.json
src/terraguard/: __init__.py  cli.py  config.py
src/terraguard/outputs/: __init__.py  formatter.py  github.py
src/terraguard/risk/: __init__.py  risk.py  risk_config.json  rules.py
src/terraguard/terraform_plan/: __init__.py  loader.py  summarizer.py
tests/fixtures/: data.tfplan.json  vpc.tfplan.json
usage/: index.html
