[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terraguard"
version = "0.1.0"
description = "Assesses risk for Terraform plans to gate CI/CD approvals."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Jonathan Martin", email = "jonathan@jonathanmartin.dev" }
]
keywords = ["terraform", "aws", "risk-assessment", "cicd", "github-actions"]

dependencies = [
    "requests>=2.31.0", # For posting to GitHub
]
classifiers = [
    "Development Status :: 3 - Alpha", # Choose appropriate status
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-ezlinks-plugin>=0.1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-github-wiki-edit-url>=0.1.0",
    # Code formatting
    "black>=23.0.0",
    # Type checking
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    # Development tools
    "ruff>=0.1.0",
    # Pre-commit hooks
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/terraguard"

[tool.hatch.build]
targets.wheel.packages = ["src/terraguard"]

[project.scripts]
"tguard" = "terraguard.cli:main"

[tool.mypy]
files = ["src"]
strict = true

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=terraguard --no-header"
